[fix] Remove unwanted vertical scrollbar, in some tables

--- a/src/app/trip/observedlocation/observed-locations.page.scss
+++ b/src/app/trip/observedlocation/observed-locations.page.scss
@@ -29,7 +29,6 @@
 }
 
 .mat-table {
-  min-width: 100%;
   --mat-cell-vertical-padding: 4px;
 
   .mat-column-program {
