--- a/src/app/trip/operation/operations.table.scss
+++ b/src/app/trip/operation/operations.table.scss
@@ -24,7 +24,6 @@ mat-toolbar {
   }
 }
 .mat-table {
-  min-width: 100%;
   --mat-cell-vertical-padding: 4px;
 
   .mat-header-row,
